Fixes height problem, action of techniques always visible on bottom of page

--- a/css/custom.css
+++ b/css/custom.css
@@ -112,6 +112,10 @@ a:hover {
     font-size: 13px;
 }
 
+.panel-heading{
+    padding: 5px;
+}
+
 .method-actions {
     margin: 0 5px;
 }
@@ -133,8 +137,8 @@ html, body, .Override.container, .Override .ncf_col
 
 .Override.container {
     width: 100%;
-    margin-top: -50px;
-    padding-top: 30px;
+    margin-top: -72px;
+    padding-top: 52px;
         
 }
 
